--- a/printer-core/pom.xml
+++ b/printer-core/pom.xml
@@ -12,6 +12,12 @@
   <name>printer-core</name>
   <url>https://github.com/miansen/printer</url>
   
+  <properties>
+    <java.version>1.8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
